fix issue with pagination overlaping

--- a/src/scss/Application/_appMain.scss
+++ b/src/scss/Application/_appMain.scss
@@ -3,7 +3,7 @@
   background-position: -30vw;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -14,7 +14,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    min-height: 100vh;
     padding: 20px;
     @include desktop {
       margin-right: 175px;
