--- a/src/scss/Homepage/_helpSection.scss
+++ b/src/scss/Homepage/_helpSection.scss
@@ -76,7 +76,7 @@
     font-family: $font-alt;
     width: 100%;
     margin: 20px 0 0;
-    height: 500px;
+    min-height: 500px;
 
     @include desktop{
       height: 400px;
